@@ -16,6 +16,7 @@ Olivier Bilodeau <olivier@bottomlesspit.org>
 Piotr Adamski <mcveat@gmail.com>
 Rodja Trappe <mail@rodja.net>
 Stefan Hammer <j.4@gmx.at>
+Timo Dörr <timo@latecrew.de>
 Thomas Frenzel <syslock@gmx.de>
 Yuttadhammo Bhikkhu <noahy57@gmail.com> 
 
